--- a/book.bib
+++ b/book.bib
@@ -676,3 +676,254 @@ year = {2008}
   year={1974},
   publisher={Harper \& Row}
 }
+
+@article{segerstrom2004psychological,
+  title={Psychological stress and the human immune system: a meta-analytic study of 30 years of inquiry.},
+  author={Segerstrom, Suzanne C and Miller, Gregory E},
+  journal={Psychological bulletin},
+  volume={130},
+  number={4},
+  pages={601},
+  year={2004},
+  publisher={American Psychological Association}
+}
+
+@article{kanner1981comparison,
+  title={Comparison of two modes of stress measurement: Daily hassles and uplifts versus major life events},
+  author={Kanner, Allen D and Coyne, James C and Schaefer, Catherine and Lazarus, Richard S},
+  journal={Journal of behavioral medicine},
+  volume={4},
+  number={1},
+  pages={1--39},
+  year={1981},
+  publisher={Springer}
+}
+
+@article{levine1999pace,
+  title={The pace of life in 31 countries},
+  author={Levine, Robert V and Norenzayan, Ara},
+  journal={Journal of cross-cultural psychology},
+  volume={30},
+  number={2},
+  pages={178--205},
+  year={1999},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
+@article{kraut1979social,
+  title={Social and emotional messages of smiling: an ethological approach.},
+  author={Kraut, Robert E and Johnston, Robert E},
+  journal={Journal of personality and social psychology},
+  volume={37},
+  number={9},
+  year={1979}
+}
+
+@article{pelham2005implicit,
+  title={Implicit egotism},
+  author={Pelham, Brett W and Carvallo, Mauricio and Jones, John T},
+  journal={Current Directions in Psychological Science},
+  volume={14},
+  number={2},
+  pages={106--110},
+  year={2005},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{peterson1988pessimistic,
+  title={Pessimistic explanatory style is a risk factor for physical illness: a thirty-five-year longitudinal study.},
+  author={Peterson, Christopher and Seligman, Martin E and Vaillant, George E},
+  journal={Journal of personality and social psychology},
+  volume={55},
+  number={1},
+  pages={23},
+  year={1988},
+  publisher={American Psychological Association}
+}
+
+@book{cook1979quasi,
+  title={Quasi-experimentation: Design \& analysis issues for field settings},
+  author={Cook, Thomas D and Campbell, Donald Thomas and Day, Arles},
+  volume={351},
+  year={1979},
+  publisher={Houghton Mifflin Boston}
+}
+
+@article{posternak2001untreated,
+  title={Untreated short-term course of major depression: a meta-analysis of outcomes from studies using wait-list control groups},
+  author={Posternak, Michael A and Miller, Ivan},
+  journal={Journal of affective disorders},
+  volume={66},
+  number={2-3},
+  pages={139--146},
+  year={2001},
+  publisher={Elsevier}
+}
+
+@article{eysenck1952effects,
+  title={The effects of psychotherapy: an evaluation.},
+  author={Eysenck, Hans J},
+  journal={Journal of consulting psychology},
+  volume={16},
+  number={5},
+  pages={319},
+  year={1952},
+  publisher={American Psychological Association}
+}
+
+@book{smith1980benefits,
+  title={The benefits of psychotherapy},
+  author={Smith, Mary Lee and Glass, Gene V and Miller, Thomas I},
+  year={1980},
+  publisher={Johns Hopkins University Press}
+}
+
+@article{lindqvist2008aftermath,
+  title={In the aftermath of teenage suicide: A qualitative study of the psychosocial consequences for the surviving family members},
+  author={Lindqvist, Per and Johansson, Lars and Karlsson, Urban},
+  journal={BMC psychiatry},
+  volume={8},
+  number={1},
+  pages={1--7},
+  year={2008},
+  publisher={Springer}
+}
+
+@book{geertz1973interpretation,
+  title={The interpretation of cultures},
+  author={Geertz, Clifford and others},
+  volume={5019},
+  year={1973},
+  publisher={Basic books}
+}
+
+@article{wilkins2008happier,
+  title={“Happier than non-Christians”: Collective emotions and symbolic boundaries among evangelical Christians},
+  author={Wilkins, Amy C},
+  journal={Social Psychology Quarterly},
+  volume={71},
+  number={3},
+  pages={281--301},
+  year={2008},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@book{glaser2017discovery,
+  title={The discovery of grounded theory: Strategies for qualitative research},
+  author={Glaser, Barney G and Strauss, Anselm L},
+  year={2017},
+  publisher={Routledge}
+}
+
+@article{abrams2009and,
+  title={“And You're Telling Me Not to Stress?” a Grounded Theory Study of Postpartum Depression Symptoms among Low-Income Mothers},
+  author={Abrams, Laura S and Curran, Laura},
+  journal={Psychology of Women Quarterly},
+  volume={33},
+  number={3},
+  pages={351--362},
+  year={2009},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{todd2004mixing,
+  title={Mixing methods in psychology},
+  author={Todd, Zazie and Nerlich, Brigitte and McKeown, Suzanne and Clarke, D},
+  journal={The integration of qualitative},
+  year={2004}
+}
+
+@article{schnall2008disgust,
+  title={Disgust as embodied moral judgment},
+  author={Schnall, Simone and Haidt, Jonathan and Clore, Gerald L and Jordan, Alexander H},
+  journal={Personality and social psychology bulletin},
+  volume={34},
+  number={8},
+  pages={1096--1109},
+  year={2008},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{knasko1992ambient,
+  title={Ambient odor's effect on creativity, mood, and perceived health},
+  author={Knasko, Susan C},
+  journal={Chemical senses},
+  volume={17},
+  number={1},
+  pages={27--35},
+  year={1992},
+  publisher={Oxford University Press}
+}
+
+@article{brown1999perceptual,
+  title={Perceptual and memory biases for health-related information in hypochondriacal individuals},
+  author={Brown, Halle D and Kosslyn, Stephen M and Delamater, Beth and Fama, Jeanne and Barsky, Arthur J},
+  journal={Journal of Psychosomatic Research},
+  volume={47},
+  number={1},
+  pages={67--78},
+  year={1999},
+  publisher={Elsevier}
+}
+
+@article{gilliland1980interactive,
+  title={The interactive effect of introversion-extraversion with caffeine induced arousal on verbal performance},
+  author={Gilliland, Kirby},
+  journal={Journal of Research in Personality},
+  volume={14},
+  number={4},
+  pages={482--492},
+  year={1980},
+  publisher={Elsevier}
+}
+
+@article{radcliffe2002dispositional,
+  title={Dispositional, unrealistic, and comparative optimism: Differential relations with the knowledge and processing of risk information and beliefs about personal risk},
+  author={Radcliffe, Nathan M and Klein, William MP},
+  journal={Personality and Social Psychology Bulletin},
+  volume={28},
+  number={6},
+  pages={836--846},
+  year={2002},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
+@article{rentfrow2003re,
+  title={The do re mi's of everyday life: the structure and personality correlates of music preferences.},
+  author={Rentfrow, Peter J and Gosling, Samuel D},
+  journal={Journal of personality and social psychology},
+  volume={84},
+  number={6},
+  pages={1236},
+  year={2003},
+  publisher={American Psychological Association}
+}
+
+@book{plomin2008behavioral,
+  title={Behavioral genetics},
+  author={Plomin, Robert and DeFries, John C and McClearn, Gerald E},
+  year={2008},
+  publisher={Macmillan}
+}
+
+@article{piff2010having,
+  title={Having less, giving more: the influence of social class on prosocial behavior.},
+  author={Piff, Paul K and Kraus, Michael W and C{\^o}t{\'e}, St{\'e}phane and Cheng, Bonnie Hayden and Keltner, Dacher},
+  journal={Journal of personality and social psychology},
+  volume={99},
+  number={5},
+  pages={771},
+  year={2010},
+  publisher={American Psychological Association}
+}
+
+@article{diener2000subjective,
+  title={Subjective well-being: The science of happiness and a proposal for a national index.},
+  author={Diener, Ed},
+  journal={American psychologist},
+  volume={55},
+  number={1},
+  pages={34},
+  year={2000},
+  publisher={American Psychological Association}
+}
